<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="postSubViewModel"
            type="com.techevaluationtask.viewmodel.Postviewmodel" />
    </data>
    <android.support.v4.widget.NestedScrollView
        android:id="@+id/personal_sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.PlkycActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.PostActivity"
        tools:showIn="@layout/activity_post">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/eid_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:error="@{postSubViewModel.postValidation.eidError}"
            app:errorEnabled="@{postSubViewModel.postValidation.eidErrorEnable}">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/eid_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eid"
                android:digits="@string/numeric"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorPrimaryDark"
                android:text="@={`` + postSubViewModel.postValidation.postFields.eid}"
                android:inputType="number"
                android:afterTextChanged="@{()->postSubViewModel.textChanged()}"
                />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/eid_til"
            app:error="@{postSubViewModel.postValidation.nameError}"
            app:errorEnabled="@{postSubViewModel.postValidation.nameErrorEnable}">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:singleLine="true"
                android:text="@={postSubViewModel.postValidation.postFields.name}"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="text"
                android:afterTextChanged="@{()->postSubViewModel.textChanged()}"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/idbaharano_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/name_til"
            app:error="@{postSubViewModel.postValidation.idbharahNoError}"
            app:errorEnabled="@{postSubViewModel.postValidation.idbharahNoErrorEnable}">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/idbaharano_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/idbarahno"
                android:singleLine="true"
                android:digits="@string/numeric"
                android:text="@={`` + postSubViewModel.postValidation.postFields.idbharahno}"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="number"
                android:afterTextChanged="@{()->postSubViewModel.textChanged()}"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_address_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/idbaharano_til"
            app:error="@{postSubViewModel.postValidation.emailError}"
            app:errorEnabled="@{postSubViewModel.postValidation.emailErrorEnable}">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:singleLine="true"
                android:text="@={postSubViewModel.postValidation.postFields.emailaddress}"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="textEmailAddress"
                android:afterTextChanged="@{()->postSubViewModel.textChanged()}"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/unifiedno_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/email_address_til"
            app:error="@{postSubViewModel.postValidation.unifiedNoError}"
            app:errorEnabled="@{postSubViewModel.postValidation.unifiedNoErrorEnable}">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/unifiedno_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/unified_number"
                android:singleLine="true"
                android:digits="@string/numeric"
                android:text="@={`` + postSubViewModel.postValidation.postFields.unifiedNumber}"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="number"
                android:afterTextChanged="@{()->postSubViewModel.textChanged()}"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobileno_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/unifiedno_til"
            app:error="@{postSubViewModel.postValidation.mobileNoError}"
            app:errorEnabled="@{postSubViewModel.postValidation.mobileNoErrorEnable}">


            <android.support.design.widget.TextInputEditText
                android:id="@+id/mobileno_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                android:maxLength="12"
                android:singleLine="true"
                android:digits="@string/numeric"
                android:text="@={`` + postSubViewModel.postValidation.postFields.mobilenumber}"
                android:imeOptions="actionNext"
                android:textColorHint="@color/colorPrimaryDark"
                android:inputType="number"
                android:afterTextChanged="@{()->postSubViewModel.textChanged()}"
                />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btnsubmit_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnColor"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/submit_post"
            android:textAllCaps="true"
            android:onClick="@{()-> postSubViewModel.onLoginClicked()}"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/mobileno_til"/>

        <Button
            android:id="@+id/btnGetData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnColor"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/get_data"
            android:textAllCaps="true"
            android:onClick="@{()-> postSubViewModel.onGetDataClick()}"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/btnsubmit_post"/>

    </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</layout>
