<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="loginSubViewModel"
            type="com.techevaluationtask.viewmodel.Loginviewmodel" />
    </data>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.techevaluationtask.view.LoginActivity"
    tools:showIn="@layout/activity_login">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/username_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:error="@{loginSubViewModel.loginValidation.userNameError}"
        app:errorEnabled="@{loginSubViewModel.loginValidation.usernameErrorEnable}">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorPrimaryDark"
            android:text="@={loginSubViewModel.loginValidation.loginFields.username}"
            android:inputType="textEmailAddress"
            android:afterTextChanged="@{()->loginSubViewModel.textChanged()}"
            />
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/pass_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/username_til"
        app:error="@{loginSubViewModel.loginValidation.passwordError}"
        app:errorEnabled="@{loginSubViewModel.loginValidation.passwordErrorEnable}"

        >


        <android.support.design.widget.TextInputEditText
            android:id="@+id/pass_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:singleLine="true"
            android:text="@={loginSubViewModel.loginValidation.loginFields.password}"
            android:imeOptions="actionDone"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textPassword"
            android:afterTextChanged="@{()->loginSubViewModel.textChanged()}"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSignInAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/btnColor"
        android:fontFamily="sans-serif"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/login"
        android:textAllCaps="true"
        android:onClick="@{()-> loginSubViewModel.onLoginClicked()}"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/pass_til"/>

</android.support.constraint.ConstraintLayout>
</layout>